# PrettyMemory

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md  README.zh-CN.md  build-and-run-tests.ps1  generate-document.ps1  make-solution-vs-2022.ps1  make-solution-vs-2026.ps1  start-with-visual-studio.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml
doxygen-assets/: comment-filter.cmd  comment-filter.ps1  comment_filter.py  footer.html  language-toggle.css  language-toggle.js
include/: PrettyMemory.h
test/: CMakeLists.txt  CountableObject.Test.cpp  CountableObject.h  Deleter.Test.cpp  EnableShadowFromThis.Test.cpp  OwnerPtr.Test.cpp  PrettyMemoryTest.h  ShadowPtr.Test.cpp  test_main.cpp
